# watermarkstudio

./: .gitignore  README.md  keystore.properties.example  metadata.json  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/watermarkstudio/: ExampleInstrumentedTest.kt  VideoExportMuxerInstrumentedTest.kt
app/src/debug/res/values/: admob.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/ml/: readme.md
app/src/main/cpp/: CMakeLists.txt  patchmatch_inpaint.cpp  removal_native.cpp  video_temporal.cpp
app/src/main/java/com/watermarkstudio/: MainActivity.kt  WatermarkStudioApplication.kt
app/src/main/res/values/: integers.xml  ondevice_inpaint.xml  strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
app/src/release/res/values/: admob.xml
app/src/test/java/com/watermarkstudio/: BrushStrokeGeometryTest.kt  ExampleRobolectricTest.kt  ExampleUnitTest.kt  FfmpegRemuxHelperTest.kt  FreeExportQuotaTest.kt  GreetingScreenshotTest.kt  MaskGeneratorTest.kt  MaskedBackgroundPropagatorTest.kt  OnDeviceInpaintConfigTest.kt  OpticalFlowRecoveryProcessorTest.kt  PreviewScaleContextTest.kt  ProcessedMediaLibraryTest.kt  RemovalInpaintTuningTest.kt  RemovalInputValidatorTest.kt  RemovalNativeTest.kt  RemovalQualityResolverTest.kt  RemovalRegionTest.kt  (+6 more)
docs/: app-ads.txt  index.html  privacy-policy.html  readme.md  terms-of-service.html
docs/assets/: legal.css
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+79 files in other folders)
